Fixed sizing of fonts on mobile devices

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -122,7 +122,8 @@ footer{
 
 .flip-card {
 	margin: 20px;
-	height: 200px;
+	max-height: 500px;
+	height: 100%;
 	background-color: transparent;
 	perspective: 1000px;
 }
@@ -130,6 +131,7 @@ footer{
 .flip-card-inner {
 	position: relative;
 	width: 100%;
+	min-height: 200px;
 	height: 100%;
 	transition: all 0.8s ease-in-out;
 	transform-style: preserve-3d;
@@ -200,4 +202,18 @@ footer{
 	position: absolute;
 	padding: 20px;
 	bottom: 0;
+}
+
+@media only screen and (max-width: 600px) {
+	.flip-card-inner {
+	  min-height: 300px;
+	}
+
+	.flip-card-back .card-content {
+		justify-content: left;
+	}
+}
+
+@media only screen and (min-width: 600px){
+	
 }
